--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,13 +84,29 @@ h3 {
   max-width: 100%;
   position: absolute;
   top: 30%;
-  right: 0;
+
+  background-color: $primary;
+  z-index: -1;
+}
+
+.background-shape-left {
+  left: 0;
+  border-top-right-radius: 150px;
+  border-bottom-right-radius: 150px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   width: 70%;
   height: 80%;
-  background-color: $primary;
+}
+
+.background-shape-right {
+  right: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
   border-top-left-radius: 150px;
   border-bottom-left-radius: 150px;
-  z-index: -1;
+  width: 70%;
+  height: 80%;
 }
 
 .bookmark-nav {
@@ -103,6 +119,31 @@ h3 {
   margin-left: 6rem;
 }
 
+// Features section
+.features .nav-link {
+  letter-spacing: 0.1em;
+}
+
+.features .nav-link {
+  border-bottom: 2px solid lightgrey;
+  padding: 1.2rem;
+  color: lightgrey;
+}
+
+.features .nav-link.active {
+  color: $tertiary;
+  border-bottom: 2px solid $secondary;
+  font-weight: 500;
+}
+
+.padding-left-10 {
+  padding-left: 10rem;
+}
+
+.margin-top-10 {
+  margin-top: 10rem;
+}
+
 @media (max-width: 768px) {
   .bookmark-nav {
     padding-left: 3rem !important;
@@ -111,5 +152,9 @@ h3 {
 
   .header-text {
     margin-left: 0;
+  }
+
+  .features .nav-item:first-child {
+    border-top: 2px solid lightgrey;
   }
 }
