--- a/scss/main.scss
+++ b/scss/main.scss
@@ -136,12 +136,9 @@ h3 {
   font-weight: 500;
 }
 
-.padding-left-10 {
+.download-cards {
   padding-left: 10rem;
-}
-
-.margin-top-10 {
-  margin-top: 10rem;
+  padding-right: 10rem;
 }
 
 @media (max-width: 768px) {
@@ -156,5 +153,10 @@ h3 {
 
   .features .nav-item:first-child {
     border-top: 2px solid lightgrey;
+  }
+
+  .download-cards {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
