--- a/css/style.css
+++ b/css/style.css
@@ -11874,6 +11874,16 @@ h3,
   color: #3c3d43;
 }
 
+.bookmark-nav {
+  padding-left: 6rem !important;
+  padding-right: 6rem !important;
+  margin: 0 !important;
+}
+
+.header-text {
+  margin-left: 6rem;
+}
+
 .nav-uppercase-spacing {
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -11896,30 +11906,27 @@ h3,
 }
 
 .btn {
-  padding: 0.5em 1em 0.5em 1em;
+  padding-left: 1rem;
+  padding-right: 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  transition: box-shadow 0.3s ease, transform 0.3s ease;
-}
-
-.btn:hover {
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  transform: scale(1.05);
 }
 
 .btn-lightgrey {
-  cursor: pointer;
-  outline: 0px;
-  border: none;
   color: #5e5d5d;
-  transition: 0.2s ease-in-out;
+  border: 1px solid #f7f7f7;
   border-radius: 0.3rem;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #f7f7f7;
   padding: 0.5rem 1rem;
 }
 
 .btn-lightgrey:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-  color: #3c3d43;
+  background-color: white;
+  border: 1px solid #9e9e9e;
+}
+
+.btn-primary:hover {
+  background-color: white;
+  color: #5265e1;
 }
 
 .background-shape {
@@ -11948,16 +11955,6 @@ h3,
   border-bottom-left-radius: 150px;
   width: 70%;
   height: 80%;
-}
-
-.bookmark-nav {
-  padding-left: 6rem !important;
-  padding-right: 6rem !important;
-  margin: 0 !important;
-}
-
-.header-text {
-  margin-left: 6rem;
 }
 
 .features .nav-link {
@@ -12026,13 +12023,82 @@ footer {
   opacity: 0.5;
 }
 
-.social {
-  width: 100px;
+.was-validated .form-control:invalid {
+  border: 2px solid #fa5959;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.invalid-feedback {
+  font-style: italic;
+  background-color: #fa5959;
+  color: white;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 0.5rem;
+  margin-top: 0;
+  position: absolute;
+}
+
+.email-submit {
+  white-space: nowrap;
+}
+
+.email-submit:hover {
+  background-color: white;
+  color: #fa5959 !important;
+  border: 1px solid #fa5959;
+}
+
+.tab-pane {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: all 0.5s ease;
+}
+
+.tab-pane.active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.nav-link {
+  position: relative;
+  color: #5265e1;
+  transition: color 0.3s ease;
+}
+
+.nav-link:hover {
+  color: #fa5959 !important;
 }
 
 .social-link {
   display: inline-block;
-  transition: transform 0.3s ease, filter 0.3s ease;
+  width: 20px;
+  height: 20px;
+}
+
+.social-link:hover {
+  transform: scale(1.1);
+}
+
+.social-twitter {
+  background-image: url("../images/icon-twitter.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.social-twitter:hover {
+  background-image: url("../images/icon-twitter-hover.svg");
+}
+
+.social-facebook {
+  background-image: url("../images/icon-facebook.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.social-facebook:hover {
+  background-image: url("../images/icon-facebook-hover.svg");
 }
 
 @media (max-width: 768px) {
@@ -12049,6 +12115,9 @@ footer {
   .download-cards {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .navbar-nav .nav-item {
+    margin-right: 0;
   }
 }
 
