--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,288 +4,11 @@ $tertiary: #242946;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  color: #969696;
-}
-h1,
-h2,
-h3 {
-  font-weight: 500;
-  color: $tertiary;
-}
-
-// Navbar and header
-.sticky-top {
-  background: #fff;
-}
-
-.navbar-nav .nav-item {
-  margin-right: 20px;
-}
-
-.navbar-nav .nav-link {
-  color: #3c3d43;
-}
-
-.bookmark-nav {
-  padding-left: 6rem !important;
-  padding-right: 6rem !important;
-  margin: 0 !important;
-}
-
-.header-text {
-  margin-left: 6rem;
-}
-
-.nav-uppercase-spacing {
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-size: 0.9rem;
-  font-weight: 400;
-}
-
-.uppercase-spacing {
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  font-size: 0.8rem;
-}
-
-.login {
-  background-color: $secondary;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.btn {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.btn-lightgrey {
-  color: #5e5d5d;
-  border: 1px solid #f7f7f7;
-  border-radius: 0.3rem;
-  background-color: #f7f7f7;
-  padding: 0.5rem 1rem;
-}
-
-.btn-lightgrey:hover {
-  background-color: white;
-  border: 1px solid #9e9e9e;
-}
-
-.btn-primary:hover {
-  background-color: white;
-  color: $primary;
-}
-
-.background-shape {
-  max-width: 100%;
-  position: absolute;
-  top: 30%;
-
-  background-color: $primary;
-  z-index: -1;
-}
-
-.background-shape-left {
-  left: 0;
-  border-top-right-radius: 150px;
-  border-bottom-right-radius: 150px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  width: 70%;
-  height: 80%;
-}
-
-.background-shape-right {
-  right: 0;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-top-left-radius: 150px;
-  border-bottom-left-radius: 150px;
-  width: 70%;
-  height: 80%;
-}
-
-// Features section
-.features .nav-link {
-  letter-spacing: 0.1em;
-}
-
-.features .nav-link {
-  border-bottom: 2px solid lightgrey;
-  padding: 1.2rem;
-  color: lightgrey;
-}
-
-.features .nav-link.active {
-  color: $tertiary;
-  border-bottom: 2px solid $secondary;
-  font-weight: 500;
-}
-
-// Download section
-.download-cards {
-  padding-left: 10rem;
-  padding-right: 10rem;
-}
-
-.download-cards p {
-  color: #969696;
-}
-
-// FAQ section
-.accordion .accordion-item {
-  background-color: transparent;
-  border-left: none;
-  border-right: none;
-  border-radius: 0;
-}
-
-.accordion-body {
-  color: #969696;
-}
-
-:focus {
-  outline: 0 !important;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
-}
-
-.accordion-button:hover {
-  color: $secondary;
-}
-
-.accordion-button:not(.collapsed) {
-  background-color: transparent;
-}
-
-.accordion-button.collapsed::after {
-  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%235265e1'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
-}
-
-.accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fa5959'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
-}
-
-// Footer
-footer {
-  background-color: $tertiary;
-}
-
-.form-control::placeholder {
-  color: #6c757d;
-  opacity: 0.5;
-}
-
-.was-validated .form-control:invalid {
-  border: 2px solid $secondary;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-
-.invalid-feedback {
-  font-style: italic;
-  background-color: $secondary;
-  color: white;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  padding: 0.5rem;
-  margin-top: 0;
-  position: absolute;
-}
-
-.email-submit {
-  white-space: nowrap;
-}
-
-.email-submit:hover {
-  background-color: white;
-  color: $secondary !important;
-  border: 1px solid $secondary;
-}
-
-// Tabs
-.tab-pane {
-  opacity: 0;
-  transform: translateX(-100px);
-  transition: all 0.5s ease;
-}
-
-.tab-pane.active {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-// Buttons & transitions
-.nav-link {
-  position: relative;
-  color: $primary;
-  transition: color 0.3s ease;
-}
-
-.nav-link:hover {
-  color: $secondary !important;
-}
-
-.social-link {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-}
-
-.social-link:hover {
-  transform: scale(1.1);
-}
-
-.social-twitter {
-  background-image: url("../images/icon-twitter.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.social-twitter:hover {
-  background-image: url("../images/icon-twitter-hover.svg");
-}
-
-.social-facebook {
-  background-image: url("../images/icon-facebook.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.social-facebook:hover {
-  background-image: url("../images/icon-facebook-hover.svg");
-}
-
-@media (max-width: 768px) {
-  .bookmark-nav {
-    padding-left: 3rem !important;
-    padding-right: 3rem !important;
-  }
-
-  .header-text {
-    margin-left: 0;
-  }
-
-  .features .nav-item:first-child {
-    border-top: 2px solid lightgrey;
-  }
-
-  .download-cards {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .navbar-nav .nav-item {
-    margin-right: 0;
-  }
-}
+@import "global";
+@import "links";
+@import "buttons";
+@import "cards";
+@import "tabs";
+@import "accordion";
+@import "footer";
+@import "media";
